src/objects/StudentTest__c.object
<CustomObject>
    <fields>
        <fullName>sName__c</fullName>
        <label>PersonTest</label>
        <referenceTo>PersonTest__c</referenceTo>
        <relationshipLabel>StudentsTest</relationshipLabel>
        <relationshipName>StudentsTest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>stdCollegeName__c</fullName>
        <label>stdCollegeName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>studentClass__c</fullName>
        <label>studentClass</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>StudentTest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>stdCollegeName__c</columns>
        <columns>studentClass__c</columns>
        <columns>sName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>StudentTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentsTest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>